--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <li>Não depende de uma conexão ativa com um servidor</li>
         </ul>
 	<p>LOREN IPSUN</p>
+	<p>LOREN IPSUN 2</p>
     </body>         
 </html>
